Simple edits to Overall Description based on Johns notes

--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -125,8 +125,7 @@ SOFTWARE REQUIREMENTS SPECIFICATION (SRS) FOR
 
 \begin{figure}
 \centering
-\includegraphics[width=1.5in,height=1.5in]{Uma_seal.png}
-\end{figure}
+\includegraphics[width=1.5in,height=1.5in]{Uma_seal.png}\end{figure}
 
 \bigskip
 
@@ -327,7 +326,7 @@ OVERALL DESCRIPTION}
 \subsection[PRODUCT
 PERSPECTIVE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 PRODUCT PERSPECTIVE}
-This product, in all of its glory, will be replacing the primary user's current pen and paper system for documenting inspection forms. Rather than filling out paper forms on site and handing the inspectee a carbon copy of the form, the tablet app will allow the inspector to fill out a digitalized version of the same form, and print said form from a wireless printer on site for the inspectee to obtain. Also, rather than storing paper files in a filing cabinet that may never be looked at again, the health inspector may, with our product, review previous forms with ease by searching for them with our comprehensive browsing and search functionality. This way, files may be found in a matter of seconds. Another aspect of this product will be the delayed upload in which forms that have been filled out on the tablet and stored locally will be synced with the central database so that they may be integrated with the main application. This eliminates the need for the health inspector to ''file'' each form after completing it.
+This product will be replacing the primary user's current pen and paper system for documenting inspections. Rather than filling out paper forms on site and handing the inspectee a carbon copy of the form, the tablet app will allow the inspector to collect the same data and print a standard form from a portable printer on site for the inspectee to review. Also, rather than storing paper files in a filing cabinet that may never be looked at again, the health inspector may, with our product, review previous forms with ease by searching for them with our comprehensive browsing and search functionality. This way, records may be found in a matter of seconds. Another aspect of this product will be the delayed upload in which forms that have been filled out on the tablet and stored locally will be synced with the central database so that they may be integrated with the main application. This eliminates the need for the health inspector to ''file'' each form after completing it.
 \newline
 The form entry, browsing and search, and delayed upload functionalities are all subprojects for the entire tablet app, which is, in and of itself, a subproject of the main project. Our contribution to the main project is depicted below:
 
@@ -348,11 +347,11 @@ PRODUCT FUNCTIONS}
 \subsubsection{Browsing \& Search}
 \begin{enumerate}
 \item{The user types in a location of the desired restaurant, septic tank, or water well.}
-\item{The tablet displays forms from its database relevant to the search requirements.}
+\item{The tablet displays records from its database relevant to the search requirements.}
 \end{enumerate}
 \subsubsection{Delayed Upload}
 \begin{enumerate}
-\item{The tablet synchronizes with the external database and uploads either specific or all form entries from the tablet to the external database once a connection has been established.}
+\item{The tablet synchronizes with the external database and uploads either specific or all records from the tablet to the external database once a connection has been established.}
 \end{enumerate}
 
 \subsection[USER
@@ -364,7 +363,7 @@ The form entry, browsing and search, and delayed upload parts of the tablet will
 \subsection[OPERATING ENVIRONMENT]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 OPERATING ENVIROMENT}
 {\selectlanguage{english}\rmfamily\color{black}
-The form entry, browsing and search, and delayed upload aspects of this project will all exist on the same platform: a tablet. The tablet should have a small amount of memory allocated to the app so that data forms may be stored locally until uploaded to the central database.}
+The form entry, browsing and search, and delayed upload aspects of this project will all exist on the same platform: a tablet. The tablet should have a small amount of memory allocated to the app so that data records may be stored locally until uploaded to the central database.}
 
 
 
@@ -372,11 +371,11 @@ The form entry, browsing and search, and delayed upload aspects of this project 
 CONSTRAINTS}
 \subsubsection{Data Entry (Form)}
 {\selectlanguage{english}\color{black}
-The form entry itself is primarily based on inspection forms created by the state and used by the town. The entry fields on each form entry in the tablet has to match the required sections on the current inspection forms. Also, there will be a finite amount of form entries the user could generate with the tablet since the tablet will have a limited amount of memory space. With recent tablet device improvements, the chances of filling up the memory on the tablet is low. With a good design of the entire project, modern day memory capacities will suffice to hold the data required.}
+The form entry itself is primarily based on inspection forms created by the state and used by the town. There must be an entry field for each piece of data corresponding to the required sections of the current inspection forms. Also, there will be a finite number of form entries the user can generate on the tablet since the tablet will have a limited amount of memory space. With recent tablet device improvements, the chances of filling up the memory on the tablet is low. With a good design of the entire project, modern day memory capacities will suffice to hold the data required.}
 
 \subsubsection{Browsing \& Search}
 {\selectlanguage{english}\color{black}
-Browsing and searching features are constrained by the design of the database itself. With a good design and structure, these features will be user intuitive and minimal effort will be needed by the user to use these features. Browsing and searching the form entries is constrained by the number of form entries in the database on the tablet.}
+Browsing and searching features are constrained by the design of the database itself. With a good design and structure, these features will be user-intuitive and minimal effort will be needed by the user to use these features. Browsing and searching the form entries is constrained by the number of form entries in the database on the tablet.}
 
 \subsubsection{Delayed Upload}
 {\selectlanguage{english}\color{black}
