--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -125,7 +125,8 @@ SOFTWARE REQUIREMENTS SPECIFICATION (SRS) FOR
 
 \begin{figure}
 \centering
-\includegraphics[width=1.5in,height=1.5in]{Uma_seal.png}\end{figure}
+\includegraphics[width=1.5in,height=1.5in]{Uma_seal.png}
+\end{figure}
 
 \bigskip
 
