Changed assumptions & dependencies

--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -392,7 +392,7 @@ ASSUMPTIONS \& DEPENDENCIES}
 \subsubsection{Data Entry (Form)}
 Our implementation of the form entry on the tablet app depends on how the central database is constructed. Each field that the database contains for each type of form must be represented in the UI of the tablet app so that the health inspector may enter all of the fields correctly. The assumption here being that any changes made to the physical forms will be updated accordingly in the database, and thus updated in the digital forms as well. 
 \subsubsection{Browsing \& Search}
-Our implementation of browsing and search on the tablet app relies partly on the implementation of the database since fields that will ultimately be searched for within the tablet app must be connected to the database in some form. However, the only main assumption for this aspect of the project is that the files being searched for still exist on the tablet. There is a possibility that files that have been removed from the tablet may be searched for, but such a case will be handled by a file not found message. 
+Our implementation of browsing and search on the tablet app relies on an internal database that holds previous records. We assume that the internal database is synced with the main database, so that the files being searched for can be found within the tablet. There is a possibility that files that have been removed from the tablet may be searched for, but such a case will be handled by a file not found message. 
 \subsubsection{Delayed Upload}
 We are assuming that the health inspector will have WiFi access in order for the tablet app to upload data from its local database to the central database via a syncing process. In the case that this assumption is incorrect and the user does not have WiFi access, a manual docking process will have to occur between the tablet and the health inspector's computer on which the main application exists. This assumes that the health inspector has the proper cable to connect the tablet to said computer, but this is a reasonable assumption since such a cable typically is included with the purchase of a tablet since its serves the dual purpose of a charger. The delayed upload also depends on the construction of the database and its fields as well as the application itself since it must sync with said application.
 
