--- a/srs-320/main.tex
+++ b/srs-320/main.tex
@@ -210,62 +210,76 @@ INTRODUCTION}
 \subsection[PURPOSE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 PURPOSE}
 {\selectlanguage{english}\rmfamily\color{black}
-Convert current, physical method of archiving Board of Health data from restaurant inspections, well water quality tests, and septic tank inspections to a new, digital method.This document provides a high level overview of the entire system then goes into detail on the tablet applications form entry, browsing and search, and delayed upload.
+Replace the current physical method of archiving Board of Health data from restaurant inspections, well-water quality reports, and septic tank pumping reports with a new digital method. This document provides a high-level overview of the entire system before going into detail on the tablet application portion's form entry, browsing and search, and delayed upload functionality.
 }
 
 
 \subsection[DOCUMENT CONVENTIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DOCUMENT CONVENTIONS}
 {\selectlanguage{english}\rmfamily\color{black}
-WRITE HERE}
-
+Nothing needed here yet.}
 
 \subsection[PRODUCT SCOPE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 SCOPE}
 {\selectlanguage{english}\rmfamily\color{black}
-This project contains multiple sub-projects and systems. 
+This project includes multiple sub-projects and systems. 
 \\     \\
-This new digital method requires a database to hold different types of inspection forms (restaurant, water well, septic tank). The database will be searchable and sortable by keywords or established parameters thus improving accessibility and simplifying analysis. Storing this data digitally will allow the customer to better analyze patterns and create a more permanent location for the data to reside. It will act as an intuitive tool to help the inspector utilize and access data in the future. To increase usability of this database, a user interface must be created to provide access and retrieval of information. This application will focus on usability of the database and a later described portion will focus on portability, thus one can think of this application as residing in an office environment. The application should include a convenient and easy method to search, sort, and analyze data from the restaurant inspections, well water quality reports, and septic tank inspections. Septic tank and well water quality inspection data should also be viewable on a geographical map with the ability to show change over time. This will illuminate differences and trends in the data that may help explain and predict the cause of said trends. The cataloguing of restaurant health inspection data could be facilitated by a form on a portable application (i.e. mobile, tablet). This portable application should be designed to locally store the inputted data and convert it to a form readable by the database so it can add the report to the rest of the database when connected. Overall, creating and structuring this database for the customer and providing easy-to-use tools for accessing it, will assist him in his inspections and simplify the retrieval of key information the customer might be interested in at a later date.
+This new digital method requires a database to hold different types of inspection results and reports, including data on restaurants, well-water quality, and septic tanks. The database must be searchable and sortable by keywords or established parameters, thus improving accessibility and simplifying data analysis. Storing this data digitally will allow the customer to better analyze patterns and create a more accessible and interactive location for the data to reside. It will act as an intuitive tool to help the inspector use and access data in the future. To access this database, a user interface must be created to provide fast access and retrieval of information. This application focus on usability, with a sub-portion designed for portability. This application is meant to be used specifically in a municipality's Board of Health office environment. The application will include a convenient and easy method to search, sort, and analyze data from the restaurant inspections, well-water quality reports, and septic tank pumping reports. Septic tank and well-water quality data should also be viewable on a geographical map with the ability to show changes over time. This will illuminate differences and trends in the data that may help explain and predict them. The cataloging of restaurant health inspection data could be facilitated by a form on a portable application (i.e. mobile, tablet). This portable application should be designed to locally store the entered data and convert it to a form readable by the database so it can add the record to the rest of the database when connected.
+\\     \\ 
+Overall, creating and structuring a database for storing various health data, and providing easy-to-use tools for accessing it, will assist the customer in his inspections and simplify the retrieval of key information he may find interest in at a later date.
 \subsubsection{Sub Projects}
 \begin{itemize}
 \item{Central Database}
-\item{Form Application for Tablet}
-\item{Application}
+\item{Form Entry Application for Tablet}
+\item{Desktop Application}
 \end{itemize}
 \textit{Central Database:}
 \newline 
 
-A central database with consistent access to data will create the integrity of the entire system. The three distinct data entities identified were: Well water inspections, septic tank inspections, and restaurant inspections, which will all need to contain location to differentiate towns. The attributes of the models will correspond to the required fields that the customer must fill in on their forms during inspections. The data for the restaurant inspections shall contain all fields that can be found on the restaurant inspection form. The data for water inspections must contain all of the relevant fields, such as water quality, measurements, address of water well, flow rate, name of the company that drilled the well, and the permit and lot number. Similarly, the data for the septic inspection will hold information such as the address, lot number, size, capacity, condition of the tank, date of last inspection, and quality of gallons pumped in and out.  The type of data stored must be able to be changed in the event of new legislation.
+A central database with constant access to data will ensure the integrity of the entire system. The three distinct data entities identified were: Well-water quality reports, septic system pumping reports, and restaurant inspections, which will all need to be differentiated by town. The attributes of the models will correspond to the required fields that the customer must enter during inspections. The data for the restaurant inspections shall contain all fields that can be found on the restaurant inspection form. The data for well reports must contain all of the relevant fields, such as water quality, measurements, address of water well, flow rate, name of the company that drilled the well, and the permit and lot number. Similarly, the data for the septic pumping report will hold information such as the address, lot number, size, capacity, condition of the tank, date of last inspection, and quality of gallons pumped in and out.  The type of data stored must be able to be changed in the event of new legislation.
 \newline
 
-The two features existing in the database include a basic database that provides basic queries to GET, POST, PUT, and DELETE records safely and securely. The other feature is to create and design a federated database.
+The first of two sub-projects for creating this database are to create a basic database that provides basic queries, such as: creating, reading, editing, and deleting records safely and securely. The second sub-project is to create and design a method to federate the database so that other portions are able to access the database structure.
 \\  \\
-\textit{Form Application for a Tablet:}
+\textit{Form Entry Application for Tablet:}
 \newline
 
-This application will be focused on usability in attempt to make it as simple as possible to enter form data. The application will be able to store data locally on the device followed by having the ability to upload to the office-based application noted (i.e. desktop application or web -application). This app will replicate the forms that the customer requires for every inspection For security reasons, the app will have a login screen for user authentication. This application will be able to either send the document to a printer or email it on the spot as well as being able to receive an e-signature. The application should allow the user to view contextual information based on data that is associated with the users current task. For example, when the user is going to inspect a restaurant, they should be shown previous inspection results. 
+This application will be focused on usability in order to make it as simple as possible to enter the data. The application will be able to store data locally on the device; and the ability to upload to the office-based application noted (e.g. desktop application or web-application). This app will replace the forms that the customer requires for every inspection by including fields for all relevant information. For security purposes, the app will have a log-in screen for user authentication. This application will be able to either send the document to a printer or email it on the spot, as well as be able to receive an e-signature. The application should allow the user to view relevant information based on data that is associated with the user's current task that has been submitted previously. For example, when the user is going to inspect a restaurant, they should be shown previous inspection results from that restaurant. 
 \newline
+\newline
+The tablet application will have the following main sections that correspond with the functionality above: 
+\begin{itemize}
+\item{Data Entry with a user interface that allows for dynamic flow through the inspection process.}
+\item{Geographic Information System (GIS) to locate well, septic, and restaurant locations.}
+\item{Browsing and search of data in order to review previously entered reports for analysis purposes.}
+\item{User authentication to verify identity of the user.}
+\item{Form printing in order to leave any necessary paperwork after an inspection.}
+\item{Delayed upload to save and move data without needing constant internet access}
 
-The form application will have the following main areas that correspond with the functionality above. User authentication as stated. Data entry as stated where the user interface allows the inspector to flow through the inspection process dynamically. Data entry (GIS) is required in order to locate well, septic, and restaurant location. Form printing is another important point as a physical copy of a restaurant inspection will most likely be required to provide to the restaurant owner. Browsing and search is also a feature of the application which includes pulling up relevant data of a current restaurant. The final important feature is the ability for delayed upload. This will allow the tablet to flow data into the central database that communicates with the main application on the web.
-\\ \\
+\end{itemize}
 \textit{Application (Usable, Connected to Database):}
 \newline
 
-An application will be created for viewing all past records stored in the database. The application should include three different sections for restaurant, water and septic.  The application will need to communicate with the central databases containing all information of past record. The site will provide an interface for querying data, including searching by location or violation. The application will contain user authentication that, once validated for an administrator, will allow for the submission of new records. Without login credentials, the information is read-only. The site will use the accepted regulation form as a base to record data from a new restaurant, water, or septic inspection and then send this new data to the relevant database. Additional functionality including mapping is mentioned next.
+An application will be created for viewing all past records stored in the database. The application should include three different sections for restaurant, wells, and septic systems.  The application will need to communicate with the central database containing all information of past records. The application will provide an interface for querying data, including searching by location or violation. The application will contain user authentication that, once validated as an administrator, will allow for the submission of new records. Without log-in credentials, the information will be visible, but immutable. The application will use the accepted regulation forms as a base to record data from new restaurant inspection, water, or septic system reports and then send this new data to the relevant database. Additional functionality of this application includes:
 \newline 
-
-Features described have included user authentication, data entry for eligible users, reporting and search as well as mapping. The reporting and search will include the ability to retrieve a general summary of 1 of 3 sections (restuarants, wells, septic tanks) that will be able to be downloaded and printed for use in a physical report. The application will also include data mapping. This map will contain points of location of wells, septic tanks, and restaurants which can then be queried and visualized. }
+\begin{itemize}
+\item{Reporting and search that includes many enter-able parameters to view and categorize reports}
+\item{User authentication so that inspectors can add report data and constituents may view public records.}
+\item{Data mapping to view data in relation to maps of corresponding towns.}
+\item{Printing of reports or search results for when physical copies are desired.}
+\end{itemize}
+}
 
 \subsection[INTENDED AUDIENCE]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 INTENDED AUDIENCE}
 {\selectlanguage{english}\rmfamily\color{black}
-    The intended audience is for health inspectors who want to use a digital alternative to record and store information as an alternative to physical methods. The primary audience will be the health inspector of the town of Leverett and Sunderland Massachusetts.}
+    This system is intended for health inspectors who want to use a digital alternative to record and store information as opposed to paper storage. Specifically, the system is being made for the health inspector of the towns of Leverett and Sunderland, Massachusetts.}
 
 \subsection[DEFINITIONS, ACRONYMS, AND
 ABBREVIATIONS]{\selectlanguage{english}\rmfamily\bfseries\color{black}
 DEFINITIONS, ACRONYMS, AND ABBREVIATIONS}
 {\selectlanguage{english}\rmfamily\color{black}
-The products name is Health.e standing for Health electronics as it is designed to digitize information on health inspections, well water and septic tanks.}
+The product's name is Health.e standing for Health Electronics, as it is designed to digitize information on health inspections, well water and septic tanks.}
 \newline
 \begin{flushleft}
 \tablehead{}
@@ -280,7 +294,7 @@ Definition\\\hline
 outside testers\\\hline
 \selectlanguage{english}\color{black} Beta test &
 \selectlanguage{english}\color{black} Limited release(s) to cooperating
-customers wanting early access to developing systems\\\hline
+customers wishing early access to developing systems\\\hline
 \selectlanguage{english}\color{black} Final test &
 \selectlanguage{english}\color{black} aka, Acceptance test, release of
 full functionality to customer for approval\\\hline
@@ -295,6 +309,8 @@ Specification\\\hline
 \selectlanguage{english}\color{black} SSRS &
 \selectlanguage{english}\color{black} System and Software Requirements
 Specification\\\hline
+\selectlanguage{english}\color{black} GIS &
+\selectlanguage{english}\color{black} Geographic Information System\\\hline
 ~
  &
 ~
